fixed carousel overflow bug... again

--- a/source/styles/components/_carousel.scss
+++ b/source/styles/components/_carousel.scss
@@ -31,9 +31,6 @@
 
 
 /* peek */
-.carousel-peek {
-  max-width: 400px;
-}
 
 .carousel-peek .carousel-item {
   transition: opacity .5s ease;
