--- a/source/styles/components/_home.scss
+++ b/source/styles/components/_home.scss
@@ -4,6 +4,7 @@
 
 .home-rotator {
   margin-bottom: 2em;
+  overflow: hidden;
 }
 
 .home-available-advisors {
